fix overflow on sessions page

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -262,7 +262,7 @@ input[type="range"] {
 -webkit-appearance: none;
 background-color: #000;
 border-radius: 65px;
-width: 75%;
+width: 80%;
 height: 25px;
 }
 input[type='range']::-webkit-slider-thumb {
@@ -296,14 +296,14 @@ div.slider-section {
 position: relative;
 top: 70px;
 left: 100px;
-width: 100%;
+width: 90%;
 z-index: 0;
 }
 .slider-section>img {
 position: absolute;
 z-index: -1;
 left: 15px;
-width: 71%;
+width: 74%;
 }
 .dan-nodan {
 list-style: none;
